# source_encrypt

./: LICENSE  pyproject.toml
c_src/: native.c
src/source_encrypt/: __main__.py  encryption.py
template_py/: __init__.py.template  key_template.h
